--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"start": "node server",
 		"server": "nodemon server",
 		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix  client && npm run build --prefix client"
 	},
 	"author": "Andres Nazzari",
 	"license": "ISC",
@@ -20,7 +21,8 @@
 		"gravatar": "^1.8.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.6",
-		"request": "^2.88.2"
+		"request": "^2.88.2",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"concurrently": "^7.0.0",
